--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZ/wC7IR6A+zBg0TYpR4hI",
+      "authorship_tag": "ABX9TyMu/x8RoW3czrCKWNc/zm62",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "メモ \n",
         "\n",
-        "ython を学ぶ。\n",
+        "python を学ぶ。\n",
         "\n",
         "アイデアは、サクサクっと python を学ぶための colab ノートブックを作る。\n",
         "\n",
@@ -75,7 +75,7 @@
         "text = \"hello \" * x\n",
         "print(text)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "\n",
         "実験してみてわかること\n",
         "* 文字列に例えば 4.5 とかかけようとするとエラーになる。\n",
-        "* 4.5 とかは float らしい。"
+        "* 4.5 とかは float らしい。 4 は int か。"
       ]
     },
     {
@@ -125,22 +125,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5a36329-8789-4518-a9ab-61ee008b1e71"
+        "outputId": "3da7c6e3-3ba7-4311-d546-7259ae667b79"
       },
       "source": [
         "x = 4\n",
+        "print(type(x))\n",
+        "x = 0.0\n",
         "print(type(x))\n",
         "x = True\n",
         "print(type(x))\n",
         "x = \"this is x.\"\n",
         "print(type(x))"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "<class 'int'>\n",
+            "<class 'float'>\n",
             "<class 'bool'>\n",
             "<class 'str'>\n"
           ],
@@ -155,10 +158,10 @@
       },
       "source": [
         "メモ \n",
+        "* 型の名前: int, float, bool, str とか。\n",
         "* print は改行が自動で入る。\n",
         "* bool は True, False で小文字にするとエラーになる。\n",
-        "* True, False 以外はなにが True になりなにが False になるのか。 => あとで bool という見出しを立てる。\n",
-        "\n"
+        "* True, False 以外はなにが True になりなにが False になるのか。 => 課題 真偽の値。\n"
       ]
     },
     {
@@ -167,9 +170,9 @@
         "id": "uN9WPC0V9JJW"
       },
       "source": [
-        "関数の呼び出し: `print` は Python の関数で、関数名のあとにカッコをつけることによって、関数を呼び出す。カッコの中には入力値(引数)を入れる。\n",
+        "関数は関数名のあとにカッコをつけることによって、関数を呼び出す。 カッコの中には引数 ひきすう を入れる。\n",
         "\n",
-        "`type`も  python のビルトイン関数、組み込み関数、built-in 関数で型を返す。\n",
+        "`type`も  python のビルトイン関数、組み込み関数、built-in 関数。\n",
         "\n",
         "メモ\n",
         "* python の組み込み関数はオブジェクトのメソッドとしての関数ではないので、使い方が決まっている。 [1,2,3].len() ではなくて、len([1,2,3])。"
@@ -181,197 +184,9 @@
         "id": "lkcEh9wZZ3Fp"
       },
       "source": [
-        "上のコードの最初の行はコメントで、Python ではコメントは`#`記号で始まる。\n",
-        "\n",
-        "次の行は再代入 `reassignment` の例。変数を作成したときと同じ `=` 演算子を使う。\n",
-        "\n",
-        "この例では `amount_in_dollars` への再代入に際し、以前の値に簡単な計算を施している。この行のところに来ると、Pythonは`=`の右辺すなわち `(0 + 4 = 4)` を評価し、その結果を、左辺の変数に代入する。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TYj8djVwFmL7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "1a8439a8-5bb6-4bf6-cd3b-f7dc407787c7"
-      },
-      "source": [
-        "if amount_in_dollars > 0:\n",
-        "    print(\"I don't want ANY money!\")\n",
-        "\n",
-        "money_song=\"Money Money Money\"\n",
-        "print(money_song)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "I don't want ANY spam!\n",
-            "Money Money Money\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eD9nlSRlZ58N"
-      },
-      "source": [
-        "条件式(`conditionals`)についてはまだ詳しくは述べないが、プログラムしたことのない人でもこのコードのやっていることは想像がつくだろう。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RroOX5ifZ9NF"
-      },
-      "source": [
-        "どのようにして、コードの `if` に属する部分を区別しているか。\n",
-        "\n",
-        " \"I don't want ANY money!\" が出力されるのは、amount_in_dollars が正の値の時だけ。ところが、そのあとのコード(たとえば print(money_song))は条件にかかわらず実行される。Pythonはどうやってこれを区別しているのか。\n",
-        "\n",
-        "`if` のある行のコロン `(:)` がコードブロックが始まることを示す。そのあとのインデントされている行がコードブロックを形成する。他の言語は一般的には`{curly braces}`でコードブロックの始まりと終わりを示す。Pythonがホワイトスペースに意味付けをして使うことは、他の言語に慣れたプログラマーが驚くが、実際には統一的で読みやすいコードになる。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sqZmcC-1aAAj"
-      },
-      "source": [
-        "次からの行はmoney_songを扱っていて、4スペースでインデントされていないので、if のコードブロックには属していない。インデントされたコードブロックの例はあとで関数の定義とくり返しの説明の時にも出てくる。\n",
-        "\n",
-        "このコードスニペットで初めてPythonにおける文字列の例が出てきている。\n",
-        "```\n",
-        "\"I don't want ANY money!\"\n",
-        "```\n",
-        "\n",
-        "文字列はダブルクォートもしくはシングルクォートで囲まれる。この例の場合は文字列がシングルクォートを含んでいるので、なんらかの対応をしないと全体をシングルクォートで囲むことはできない。対応方法については後述する。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k8uEKGPJmFz4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "0c229b23-cbb7-4e1f-9ce0-1a418f3bb9dc"
-      },
-      "source": [
-        "money_song = \"Money \" * amount_in_dollars\n",
-        "print(money_song)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Spam Spam Spam Spam \n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1boVcCdnaC8u"
-      },
-      "source": [
-        "演算子`*` はふつうはふたつの数字を掛け合わせる `(3 * 3 -> 9)` のに使われるが、文字列に演算子 `*` を使うと文字列の繰り返しになる。他にも演算子 `+` が数字に使われる時と文字列に使われる時が違う意味で便利に使えるようになっている。この仕組みを演算子オーバーロードと言う。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1lgHyBPUaI2L"
-      },
-      "source": [
-        "### Pythonの数字と演算について\n",
-        "\n",
-        "すでに数字を含む変数の例を一つ見た。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Tu9MRo76yJJQ"
-      },
-      "source": [
-        "amount_in_dollars = 0"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iSsP3s-eyGsn"
-      },
-      "source": [
-        "数字にもいろんな種類がある。Pythonの`type`という関数を使うと、型 `type` を表示できる。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i9FS6gNiy4L5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f6645638-afe3-4f2c-da15-f22724ddd856"
-      },
-      "source": [
-        "type (amount_in_dollars)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zVyPmTZULBnJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c033c81e-9da4-484f-f947-582468582d4b"
-      },
-      "source": [
-        "if type (amount_in_dollars) == int:\n",
-        "  print (\"整数!!!!\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "整数!!!!\n"
-          ],
-          "name": "stdout"
-        }
+        "言葉\n",
+        "* 再代入 `reassignment` \n",
+        "* 演算子オーバーロード 文字列 * 整数 => 繰返し、のように演算子の意味を変えて使うこと。"
       ]
     },
     {
@@ -380,50 +195,8 @@
         "id": "B_JZiwtey2lz"
       },
       "source": [
-        "これで、amount_in_dollarsが `int` であることがわかった。`int` は integer (整数) の省略形。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lQcL51SXzaM4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "666e2a80-f3a3-4863-cf06-aa71b826df3a"
-      },
-      "source": [
-        "type (19.95)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "float"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4HK--BFczYO8"
-      },
-      "source": [
-        "\n",
-        "`float` は浮動小数点型。\n",
-        "\n",
-        "`type()` は `print()` と同様にPythonの組み込み関数の一つ。型を確認するのに便利に使える。\n",
-        "\n",
-        "数字について電卓にあるような四則演算の演算子は Python にもある。"
+        "* `int` は integer (整数) の省略形。\n",
+        "* `float` は浮動小数点型。\n"
       ]
     },
     {
@@ -441,75 +214,24 @@
         "|a // b\t| Floor division |\t Quotient of a and b, removing fractional parts |\n",
         "|a % b\t| Modulus\t       |   Integer remainder after division of a by b |\n",
         "|a ** b\t| Exponentiation |\t a raised to the power of b |\n",
-        "|-a\t    | Negation\t     |   The negative of a |\n",
-        "\n",
-        "\n",
-        "割り算の演算子が2種類あることに注意。\n",
-        "\n",
-        "電卓の割り算は \"True division\" です。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5vVRzjxe_BbW",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "66777b77-acc0-46b0-9c7f-0bc0057b0f38"
-      },
-      "source": [
-        "print (5 / 2)\n",
-        "print (6 / 2)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2.5\n",
-            "3.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OiCyMtko_Jf6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "e9b6e657-16ba-428a-9313-d700d9ba86ed"
-      },
-      "source": [
-        "print (9 // 4)\n",
-        "print (-9 // 4)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2\n",
-            "-3\n"
-          ],
-          "name": "stdout"
-        }
+        "|-a\t    | Negation\t     |   The negative of a |\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ogC_bO-J-_aO"
+        "id": "IXLi1Yhx-DJL"
       },
       "source": [
+        "割り算の演算子が2種類あることに注意。\n",
+        "\n",
+        "電卓の割り算は \"True division\" 。\n",
+        "\n",
         "演算子 `/` の結果は常に `float` 。\n",
         "\n",
-        "演算子 `//` は割り算の結果以下の最大の整数を返す。"
+        "演算子 `//` は割り算の結果以下の最大の整数を返す。\n",
+        "\n",
+        "切り下げ flooor、 切り上げ ceiling は次のようにする。"
       ]
     },
     {
@@ -517,16 +239,15 @@
       "metadata": {
         "id": "L_6IaF1OZ4gW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d622da89-8a92-4868-8313-70bb56f3e064"
+        "outputId": "83ffe101-c818-48b6-b27f-08b5e4413869"
       },
       "source": [
         "print (5 // 2)\n",
-        "print (6 // 2)"
+        "print (-(-5 // 2))"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,20 +262,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ci6ETS-HaPxr"
-      },
-      "source": [
-        "これがどんなところで便利かは後ほどの例でわかるだろう。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Aqk5EGP-v6d4"
       },
       "source": [
-        "\n",
-        "### 演算の優先順位\n",
+        "# 演算の優先順位\n",
         "小学校で習う算数で、計算には順序があることを習う。PEMDAS というニーモニックを覚えている人もいるだろう。\n",
         "* Parentheses カッコ\n",
         "* Exponents 冪乗\n",
@@ -562,101 +273,6 @@
         "* Addtion/Subtraction 加算/減算\n",
         "\n",
         "Python においても同じルールが適用される。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CKbrRj2Lbs_s",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f40a0d4d-8e61-4c58-e417-b5d500d8f19e"
-      },
-      "source": [
-        "8 - 3 + 2"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hRWoU9A2btpz",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "04c047dc-18d9-4fea-9a9f-5752821cc7dd"
-      },
-      "source": [
-        "-3 + 4 * 2"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FBO7f8GacFyH"
-      },
-      "source": [
-        "次の例ではカッコによって強制的に計算の順序を変える必要がある。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dN6LRC9NcFVd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f26a0108-7080-417c-a1ff-a43395e62315"
-      },
-      "source": [
-        "# 頭を除いた肩までの高さを計算する\n",
-        "head_height_cm = 25\n",
-        "my_height_cm = 190\n",
-        "shoulder_height_meters = ( my_height_cm - head_height_cm ) / 100\n",
-        "print(\"Shoulder height in meters = \" ,  shoulder_height_meters, \"?\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Shoulder height in meters =  1.65 ?\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -745,18 +361,18 @@
       "metadata": {
         "id": "ZsxeQZplekRg",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 84
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b0e154b5-0d74-40df-ff61-9e1607e3454e"
+        "outputId": "fdb0baf5-597f-45c4-ce6b-61ebb7077a16"
       },
       "source": [
         "print(float(10)) \n",
         "print(int(3.33))\n",
         "print (int (-3.33))\n",
-        "print(-3.33 // 1)"
+        "print(-3.33 // 1)\n",
+        "print(-(-3.33 // 1))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,10 +380,20 @@
             "10.0\n",
             "3\n",
             "-3\n",
-            "-4.0\n"
+            "-4.0\n",
+            "4.0\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E8f0Yxf6-769"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
