--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPR8iRz+lAW4RG0VBvhHrLW",
+      "authorship_tag": "ABX9TyMVSg72oHEq/Zh5VmA4jQJM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3708,21 +3708,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j8R6h348b9zZ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "l4Y__AcJBDHw"
       },
       "source": [
-        "### while ループ\n",
+        "---\n",
+        "while ループ\n",
         "\n",
-        "`while`ループは条件を満たしている間、繰り返す。\n"
+        "`while` ループは条件を満たしている間、繰り返す。\n"
       ]
     },
     {
@@ -3755,24 +3747,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_BF8GlV0gXZL"
-      },
-      "source": [
-        "`while`ループの引数はブール式として評価され、ループは式が`False`になるまで繰り返される。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "yBJfdR4648fo"
       },
       "source": [
-        "### List 内包表記\n",
+        "# リスト内包表記 list comprehension\n",
         "\n",
-        "Pythonのリスト内包表記はたいへん人気がある。。\n",
-        "\n",
-        "理解するためにまず例をみよう。\n",
-        "\n"
+        "python のリスト内包表記はたいへん人気がある。\n"
       ]
     },
     {
@@ -3812,6 +3792,15 @@
       },
       "source": [
         "これをリスト内包表記でなくあらわすとしたら次のようになる。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eNZp2OepszKY"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -4075,7 +4064,7 @@
       "source": [
         "def count_negatives(nums):\n",
         "    # Reminder: in the \"booleans and conditionals\" exercises, we learned about a quirk of \n",
-        "    # Python where it calculates something like True + True + False + True to be equal to 3.\n",
+        "    # python where it calculates something like True + True + False + True to be equal to 3.\n",
         "    return sum([num < 0 for num in nums])\n",
         "\n",
         "count_negatives([5, -1, -2, 0, 3])"
@@ -4091,7 +4080,7 @@
       "source": [
         "どの解決方法が最善か、は主観的なものだが、短いコードはそれだけで価値がある。\n",
         "\n",
-        "しかし、`The Zen of Python`のつぎのくだりを心に留めておくことも大切だ。\n",
+        "しかし、`The Zen of python` のつぎのくだりを心に留めておくことも大切だ。\n",
         "\n",
         "```\n",
         "読みやすさは大切だ。\n",
@@ -4242,7 +4231,7 @@
         "id": "ZcHShAmzoRp1"
       },
       "source": [
-        "`R`とPythonはnumpyとpandasというライブラリーがあり、リストと2を比べて `[False, False, True, True]`のようなブール型のリストを返す機能がある。\n",
+        "`R`と python はnumpyとpandasというライブラリーがあり、リストと2を比べて `[False, False, True, True]`のようなブール型のリストを返す機能がある。\n",
         "\n",
         "対応する要素が`n`より大きいかどうかをブール型の要素のリストで返す関数を作る。\n"
       ]
@@ -4347,7 +4336,7 @@
       "source": [
         "### 問題 4\n",
         "\n",
-        "Pythonカジノにはブラックジャックのテーブルの横にスロットマシンがある。\n",
+        "python  カジノにはブラックジャックのテーブルの横にスロットマシンがある。\n",
         "\n",
         "`play_slot_machine()`を実行すると、賞金がでる。普通は0ドルを返してくるが、運がよければ大金が手に入る。\n",
         "\n",
