--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMK+Rqqk3GX+VGauEymiZrE",
+      "authorship_tag": "ABX9TyNoV5W9TiIiLmX7rJ9DHjns",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3517,15 +3517,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R4g0bkJdY5OU"
-      },
-      "source": [
-        "# ここから kaggle05loop.ipynb"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "WHmLjrJyZPn8"
       },
       "source": [
@@ -3891,7 +3882,7 @@
         "loud_short_planets = [planet.upper() + '!!!!' for planet in planets if len(planet) < 6]\n",
         "loud_short_planets"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4148,7 +4139,7 @@
         "print (has_lucky_number([1, 2, 3]))\n",
         "print (has_lucky_number([1, 2, 3, 7]))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4219,7 +4210,7 @@
         "\n",
         "print (greater_than_two([1, 2, 3, 4])) \n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4233,21 +4224,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f2D94wP0Mpil"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ZcHShAmzoRp1"
       },
       "source": [
-        "`R`と python はnumpyとpandasというライブラリーがあり、リストと2を比べて `[False, False, True, True]`のようなブール型のリストを返す機能がある。\n",
+        "python は numpy と pandas というライブラリーがあり、リストと 2 を比べて `[False, False, True, True]` のようなブール型のリストを返す機能がある。\n",
         "\n",
-        "対応する要素が`n`より大きいかどうかをブール型の要素のリストで返す関数を作る。\n"
+        "対応する要素が `n` より大きいかどうかをブール型の要素のリストで返す関数を作る。\n"
       ]
     },
     {
@@ -4293,15 +4275,44 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1PJuG8dYQJe4",
+        "outputId": "fbef568b-75b8-440e-9636-c7e257f0951d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 別解\n",
+        "[num > 2 for num in [1,2,3,4]]"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False, False, True, True]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "w2q2tgL8oW--"
       },
       "source": [
+        "---\n",
+        "問題\n",
         "\n",
-        "### 問題 3\n",
-        "\n",
-        "食事のリストについて、同じ食事が2日続けて出されていれば`True`、そうでなければ`False`を返すプログラムを書く。\n"
+        "食事のリストについて、同じ食事が2日続けて出されていれば `True`、そうでなければ `False` を返すプログラムを書く。\n"
       ]
     },
     {
@@ -4343,30 +4354,90 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D8M-euNTQ0-F",
+        "outputId": "b1b83095-aacb-4d7b-9548-80317cda3a63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 別解\n",
+        "meals = [\"curry\", \"cutlet\", \"soup\", \"sushi\"]\n",
+        "meals2 = [\"dummy\"] + meals\n",
+        "print(sum([a == b for (a,b) in list(zip(meals, meals2))])>0)\n",
+        "\n",
+        "meals = [\"curry\", \"cutlet\",  \"soup\", \"sushi\", \"sushi\"]\n",
+        "meals2 = [\"dummy\"] + meals\n",
+        "print(sum([a == b for (a,b) in list(zip(meals, meals2))])>0)\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "XsM3R2JRoaxm"
       },
       "source": [
-        "### 問題 4\n",
+        "---\n",
+        "問題\n",
         "\n",
         "python  カジノにはブラックジャックのテーブルの横にスロットマシンがある。\n",
         "\n",
-        "`play_slot_machine()`を実行すると、賞金がでる。普通は0ドルを返してくるが、運がよければ大金が手に入る。\n",
-        "\n",
-        "試しにやってみよう。"
+        "`play_slot_machine()` を実行すると、賞金がでる。普通は 0 ドルを返してくるが、運がよければ大金が手に入る。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wvY-BRAGocR3"
+        "id": "wvY-BRAGocR3",
+        "outputId": "3a8deee2-907c-4b8c-c80e-3232ba9c997a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# play_slot_machine()"
+        "import random\n",
+        "\n",
+        "def play_slot_machine():\n",
+        "    r = random.random()\n",
+        "    if r < .005:\n",
+        "        return 100\n",
+        "    elif r < .05:\n",
+        "        return 50\n",
+        "    elif r < .25:\n",
+        "        return 1.5\n",
+        "    else:\n",
+        "        return 0\n",
+        "\n",
+        "play_slot_machine()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4374,9 +4445,11 @@
         "id": "oZdk9kPWoeZI"
       },
       "source": [
-        "ところで、1回1ドルかかるって言ったっけ。気にしなくていい、あとで請求書が行くから。\n",
+        "1 回 1 ドルかかる。\n",
         "\n",
-        "1回スロットマシンでプレイするたびの期待される儲け(ロス)はいくらか。カジノはそれを秘密にするけれど、モンテカルロ法によって推測することができる。シミュレーションで回数を繰り返して平均値をとることによって期待値を計算する方法である。\n",
+        "スロットマシンでプレイするたびの期待される儲け(ロス)はいくらか。\n",
+        "\n",
+        "モンテカルロ法によっ期待値を計算する。\n",
         "\n",
         "次の関数を完成させる。"
       ]
@@ -4384,7 +4457,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-6-lKStLoi8v"
+        "id": "-6-lKStLoi8v",
+        "outputId": "d4799e3d-f53f-4218-8222-1e830ee801aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "def estimate_average_slot_payout(n_runs):\n",
@@ -4400,10 +4477,23 @@
         "        result.append(play_slot_machine())\n",
         "    return (sum(result) - n_runs)/n_runs\n",
         "\n",
-        "\n"
+        "estimate_average_slot_payout(1000)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.391"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4426,49 +4516,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kYx20gNtAiGy"
-      },
-      "source": [
-        "# kaggle06string.ipynb"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5K849kXOfnPj"
-      },
-      "source": [
-        "# メモ\n",
-        "\n",
-        "1.  kaggleのPython tutorialをベスにColabのノートブックを作成している。\n",
-        "1.  Colabで開いて読まれることを想定。\n",
-        "1.  元ファイル (\n",
-        "https://www.kaggle.com/colinmorris/strings-and-dictionaries )\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "x2LVPJLMA11H"
-      },
-      "source": [
-        "# 文字列\n",
-        "\n",
-        "Pythonは文字列の扱いが得意で、この章ではPythonに組み込まれている関数とフォーマット処理について述べる。\n",
-        "\n",
-        "文字列操作はしばしば科学研究の文脈で使われ、Pythonの特典のひとつと言える。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "5m3Y_QU8RwKT"
       },
       "source": [
-        "### 文字列文法\n",
-        "\n",
-        "復習になるが、Pythonの文字列はシングルクォートでもダブルクォートでも作ることができて、機能的に全く同じである。\n"
+        "python の文字列はシングルクォートでもダブルクォートでも作ることができて、機能的に全く同じである。\n"
       ]
     },
     {
@@ -4628,7 +4679,7 @@
         "id": "2XbJYKLpSNU8"
       },
       "source": [
-        "表の最後の行の`\\n`は、改行文字を表し、Pythonでは改行して新しい行になる。\n"
+        "表の最後の行の`\\n`は、改行文字を表し、 python では改行して新しい行になる。\n"
       ]
     },
     {
@@ -4663,7 +4714,11 @@
         "id": "X0P8Z55PSSnS"
       },
       "source": [
-        "さらにPythonの3重引用符は、｀Enter`による改行をうけつける。つまり、みたままの形で文字列を変数に入れることができる。すでに`docstring`で見てきているが、どこでもできる。\n"
+        "さらに python の 3 重引用符は、｀Enter` による改行をうけつける。\n",
+        "\n",
+        "見たままの形で文字列を変数に入れることができる。\n",
+        "\n",
+        "すでに `docstring` で見てきている。\n"
       ]
     },
     {
@@ -4712,7 +4767,7 @@
         "id": "naFxE9IhSWF7"
       },
       "source": [
-        "`printf()`関数は自動的に改行コードを最後に入れる。デフォルトの`¥n`を入れさせないためには次のようにする。\n"
+        "`printf()` 関数は自動的に改行コードを最後に入れる。デフォルトの `¥n` を入れさせないためには次のようにする。\n"
       ]
     },
     {
@@ -4750,9 +4805,9 @@
         "id": "kIAb25k8SZc7"
       },
       "source": [
-        "### 文字列とリスト\n",
+        "文字列とリスト\n",
         "\n",
-        "文字列`string`は文字`character`のシーケンス`sequence`、リスト、とみなすことができて、リストについてのほとんどの関数やメソッドが使える。\n"
+        "文字列 `string` は文字 `character` のシーケンス `sequence`、リスト、とみなすことができて、リストについてのほとんどの関数やメソッドが使える。\n"
       ]
     },
     {
@@ -4890,7 +4945,7 @@
       "source": [
         "しかし!!!!\n",
         "\n",
-        "リストと文字列の最大の違いは、文字列はイミュータブル`immutable`だと言うことだ。文字列は変更できない。\n"
+        "リストと文字列の最大の違いは、文字列はイミュータブル `immutable` だと言うことだ。文字列は変更できない。\n"
       ]
     },
     {
@@ -4908,41 +4963,12 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uNifsGul7hdt",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "41a7b242-6b6e-490a-8c24-f482b69ec778"
-      },
-      "source": [
-        "type (\"\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "pVRDChLjSpNR"
       },
       "source": [
-        "### 文字列メソッド\n",
+        "文字列メソッド\n",
         "\n",
         "文字列型`str`はたくさんの便利なメソッドがある。ここで紹介するのはほんの一部である。\n"
       ]
@@ -4979,6 +5005,15 @@
           },
           "execution_count": 18
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E9skyOyIiJf3"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -5279,7 +5314,7 @@
         "id": "kZAHvg87S3AZ"
       },
       "source": [
-        "Pythonは`+`で文字列を結合できる。"
+        "python  は`+`で文字列を結合できる。"
       ]
     },
     {
@@ -5499,7 +5534,7 @@
       "source": [
         "# 辞書\n",
         "\n",
-        "辞書 `dictionary` はPythonに組み込まれたデータ型で、キーと値をマップしたもの。\n"
+        "辞書 `dictionary` は python に組み込まれたデータ型で、キーと値をマップしたもの。\n"
       ]
     },
     {
@@ -6058,7 +6093,7 @@
         "    containing the keyword.\n",
         "\n",
         "    Example:\n",
-        "    doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
+        "    doc_list = [\"The Learn  python  Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
         "    >>> word_search(doc_list, 'casino')\n",
         "    >>> [0]\n",
         "    \"\"\"\n",
@@ -6066,7 +6101,7 @@
         "    dictOfMatch = { i : match[i] for i in range(0, len(match))}\n",
         "    return  [key for key in dictOfMatch if dictOfMatch[key] > 0]\n",
         "\n",
-        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
+        "doc_list = [\"The Learn  python  Challenge Casino.\", \"They bought a car\", \"Casinoville\"]\n",
         "word_search(doc_list, 'casino')\n"
       ],
       "execution_count": null,
@@ -6115,7 +6150,7 @@
         "    Returns a dictionary where each key is a keyword, and the value is a list of indices\n",
         "    (from doc_list) of the documents containing that keyword\n",
         "\n",
-        "    >>> doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car and a casino\", \"Casinoville\"]\n",
+        "    >>> doc_list = [\"The Learn  python  Challenge Casino.\", \"They bought a car and a casino\", \"Casinoville\"]\n",
         "    >>> keywords = ['casino', 'they']\n",
         "    >>> multi_word_search(doc_list, keywords)\n",
         "    {'casino': [0, 1], 'they': [1]}\n",
@@ -6124,7 +6159,7 @@
         "    \n",
         "    return dictOfMatch\n",
         "\n",
-        "doc_list = [\"The Learn Python Challenge Casino.\", \"They bought a car and a casino\", \"Casinoville\"]\n",
+        "doc_list = [\"The Learn  python  Challenge Casino.\", \"They bought a car and a casino\", \"Casinoville\"]\n",
         "keywords = ['casino', 'they']\n",
         "\n",
         "multi_word_search(doc_list, keywords)"
@@ -6162,7 +6197,7 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. kaggle の Python tutorial をベスに Colab ノートブックを作成している。\n",
+        "1. kaggle の  python  tutorial をベスに Colab ノートブックを作成している。\n",
         "1. Colab で開いて読まれることを想定。\n",
         "1. 元ファイル ( https://www.kaggle.com/colinmorris/working-with-external-libraries )\n"
       ]
@@ -6188,9 +6223,9 @@
         "\n",
         "これまで学んできた型 type と関数 function は言語に始めから組み込まれているものだった。\n",
         "\n",
-        "しかし、Python の利点は Python のために書かれ、データサイエンスなどで利用される高品質のライブラリーがたくさんあることである。\n",
+        "しかし、 python  の利点は  python  のために書かれ、データサイエンスなどで利用される高品質のライブラリーがたくさんあることである。\n",
         "\n",
-        "そのいくつかは標準ライブラリーで、Pythonの動く環境ならば必ずあるが、それ以外はかならずしも Python と一緒ではないが、簡単に加えることができる。\n",
+        "そのいくつかは標準ライブラリーで、 python の動く環境ならば必ずあるが、それ以外はかならずしも  python  と一緒ではないが、簡単に加えることができる。\n",
         "\n",
         "いずれにせよ、 import によってライブラリーにアクセスすることになる。\n",
         "</br>\n",
@@ -6620,7 +6655,7 @@
       "source": [
         "import numpy\n",
         "\n",
-        "from IPython.display import HTML, display\n",
+        "from I python .display import HTML, display\n",
         "\n",
         "print(\"numpy.random is a\", type(numpy.random))\n",
         "\n",
@@ -7004,11 +7039,11 @@
         "id": "kdVs_Z5xI5ci"
       },
       "source": [
-        "Pythonはコアとなる文法は厳しく定義されていると思いがちであるが、`+`、`<`、`in`、`==`、インデクスやスライスのための`square bracket`など、しかし、実際のところPythonのやり方は放任主義と言える。新しい型を定義する際に、足す、や同等である、の意味を定義することができる。\n",
+        "python  はコアとなる文法は厳しく定義されていると思いがちであるが、`+`、`<`、`in`、`==`、インデクスやスライスのための`square bracket`など、しかし、実際のところ python のやり方は放任主義と言える。新しい型を定義する際に、足す、や同等である、の意味を定義することができる。\n",
         "\n",
         "`list`のデザイナーはリストに数値を足すのは駄目、と決めたが、`numpy`のデザイナーは`array`に数値を足すのは、有り、と考えた。\n",
         "\n",
-        "次に`numpy`の`array`でいくつかのPythonの演算子が意外な(少なくとも`list`と違った)ふるまいをするかを示そう。\n"
+        "次に`numpy`の`array`でいくつかの python の演算子が意外な(少なくとも`list`と違った)ふるまいをするかを示そう。\n"
       ]
     },
     {
@@ -7199,7 +7234,7 @@
         "\n",
         "ということでなに言っているかわからなくても、大事なのはかならずしも明確でなく、魔法のようなやりかたで演算子オーバーロードが行われることがある、ということを理解しておくことだ。\n",
         "\n",
-        "Pythonの演算子が`int`、`string`、`list`でどう働くかを理解していてもそれが`tensorflow Tensor`、`numpy ndarray`、`pandas Dataframe`でどういう意味かをそのままでわかったことにはならないが、すこし`DataFrame`をかじるとたとえば次のような式がどのような意味かが、本能的にわかり始める。"
+        "python  の演算子が`int`、`string`、`list`でどう働くかを理解していてもそれが`tensorflow Tensor`、`numpy ndarray`、`pandas Dataframe`でどういう意味かをそのままでわかったことにはならないが、すこし`DataFrame`をかじるとたとえば次のような式がどのような意味かが、本能的にわかり始める。"
       ]
     },
     {
@@ -7265,11 +7300,11 @@
       "source": [
         "これらが、演算子オーバーロードに直接関係している。\n",
         "\n",
-        "Pythonのプログラマーが自分の作った型に演算子を定義する際、まず `__lt__`、`__setattr__`、`__contains__`のような前後に2つずつアンダースコアがついた名前のメソッドを作る。このダブル・アンダースコア書式ではPythonにとって一般に特殊な意味を持つ。\n",
+        "python  のプログラマーが自分の作った型に演算子を定義する際、まず `__lt__`、`__setattr__`、`__contains__`のような前後に2つずつアンダースコアがついた名前のメソッドを作る。このダブル・アンダースコア書式では python にとって一般に特殊な意味を持つ。\n",
         "\n",
         "例えば、`[1, 2, 3]`が裏で`__contains__`を呼び出すとすると、それは`[1, 2, 3].__contains__(x)`としていることになる。\n",
         "\n",
-        "この辺を興味があって学びたいならばPythonの公式ドキュメントにたくさんのアンダースコア・メソッドについて書いてある。このレッスンでは扱わない。"
+        "この辺を興味があって学びたいならば python の公式ドキュメントにたくさんのアンダースコア・メソッドについて書いてある。このレッスンでは扱わない。"
       ]
     },
     {
@@ -7298,7 +7333,7 @@
       "source": [
         "### 問題 1. `matplotlib`問題\n",
         "\n",
-        "ジミーは`estimate_average_slot_payout`関数をためしてみたところ、長くやればカジノに勝つことに気がついた。200ドルで始めて500回やって結果を`list`にした。Pythonの`matplotlib`をつかって時系列でバランスのグラフを書いた。\n"
+        "ジミーは`estimate_average_slot_payout`関数をためしてみたところ、長くやればカジノに勝つことに気がついた。200ドルで始めて500回やって結果を`list`にした。 python の`matplotlib`をつかって時系列でバランスのグラフを書いた。\n"
       ]
     },
     {
