--- a/math_programmer_yukihiroshi.ipynb
+++ b/math_programmer_yukihiroshi.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_programmer_yukihiroshi.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5H1i9Qh61iaionambcpvM",
+      "authorship_tag": "ABX9TyP8RijXwvQGUUQosET4Lur7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
       },
       "source": [
         "---\n",
-        "問題 $\\quad$ 100日後は何曜日か。\n",
+        "曜日クイズ $\\quad$ 100日後は何曜日か。\n",
         "\n",
         "7 で割ったあまりを今日に足す。 今日を日曜日とすると\n",
         "\n",
@@ -111,11 +111,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b5GGDcULsBUt",
-        "outputId": "0b1b0b05-7f84-4e72-a2fe-65cb84451c2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b5GGDcULsBUt",
+        "outputId": "0b1b0b05-7f84-4e72-a2fe-65cb84451c2f"
       },
       "source": [
         "100 % 7"
@@ -150,11 +150,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qCN8NCcCsaFJ",
-        "outputId": "bd828d6a-7e14-4b9e-e6ff-8cada782dc06",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qCN8NCcCsaFJ",
+        "outputId": "bd828d6a-7e14-4b9e-e6ff-8cada782dc06"
       },
       "source": [
         "n = 100\n",
@@ -184,7 +184,7 @@
       },
       "source": [
         "---\n",
-        "問題 $\\quad$ $10^{100}$ 日後は何曜日か。\n",
+        "曜日クイズ 2 $\\quad$ $10^{100}$ 日後は何曜日か。\n",
         "\n",
         "テキストはこれは 100 を 6 で割って解いている。\n",
         "あまりに、月水火土木金を対応させている。 日曜日はない。 並びも順当ではない。\n",
@@ -201,11 +201,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LvWiXkU-9S-T",
-        "outputId": "01ad45a5-401b-48cb-f3c8-9753c948f615",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LvWiXkU-9S-T",
+        "outputId": "01ad45a5-401b-48cb-f3c8-9753c948f615"
       },
       "source": [
         "n = 10\n",
@@ -252,6 +252,62 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f_4gKayQuDO9"
+      },
+      "source": [
+        "---\n",
+        "累乗クイズ $\\quad$ $1234567^{987654321}$ の 1 の位を求める。\n",
+        "\n",
+        "実験して周期性を求める。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sS1BhQkAfwIN",
+        "outputId": "70cf516a-3a1d-43c4-8817-b0b3375f42ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "n = 7\n",
+        "print([n**m for m in range(10)])\n",
+        "print([n**m % 10 for m in range(10)])\n",
+        "x = 987654321 % 4\n",
+        "print(x)\n",
+        "print(7**1) # 答え"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 7, 49, 343, 2401, 16807, 117649, 823543, 5764801, 40353607]\n",
+            "[1, 7, 9, 3, 1, 7, 9, 3, 1, 7]\n",
+            "1\n",
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4aW3FbWbmYv-"
+      },
+      "source": [
+        "---\n",
+        "オセロで通信\n",
+        "\n",
+        "クイズ $\\quad$ 手品師と弟子、客の 3 人がいます。 手品師は目隠しをしています。\n",
+        "\n"
       ]
     }
   ]
